--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 *.cb
 *.cb2
 *.out.ps
-
 ## Intermediate documents:
 *.dvi
 *-converted-to.*
@@ -19,7 +18,6 @@
 # *.ps
 # *.eps
 # *.pdf
-
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
 *.bcf
@@ -28,36 +26,28 @@
 *-blx.bib
 *.brf
 *.run.xml
-
 ## Build tool auxiliary files:
 *.fdb_latexmk
 *.synctex
 *.synctex.gz
 *.synctex.gz(busy)
 *.pdfsync
-
 ## Auxiliary and intermediate files from other packages:
 # algorithms
 *.alg
 *.loa
-
 # achemso
 acs-*.bib
-
 # amsthm
 *.thm
-
 # beamer
 *.nav
 *.snm
 *.vrb
-
 # cprotect
 *.cpt
-
 # fixme
 *.lox
-
 #(r)(e)ledmac/(r)(e)ledpar
 *.end
 *.?end
@@ -73,7 +63,6 @@ acs-*.bib
 *.eledsec[1-9][0-9]R
 *.eledsec[1-9][0-9][0-9]
 *.eledsec[1-9][0-9][0-9]R
-
 # glossaries
 *.acn
 *.acr
@@ -81,28 +70,22 @@ acs-*.bib
 *.glo
 *.gls
 *.glsdefs
-
 # gnuplottex
 *-gnuplottex-*
-
 # hyperref
 *.brf
-
 # knitr
 *-concordance.tex
 # TODO Comment the next line if you want to keep your tikz graphics files
 *.tikz
 *-tikzDictionary
-
 # listings
 *.lol
-
 # makeidx
 *.idx
 *.ilg
 *.ind
 *.ist
-
 # minitoc
 *.maf
 *.mlf
@@ -110,76 +93,56 @@ acs-*.bib
 *.mtc
 *.mtc[0-9]
 *.mtc[1-9][0-9]
-
 # minted
 _minted*
 *.pyg
-
 # morewrites
 *.mw
-
 # mylatexformat
 *.fmt
-
 # nomencl
 *.nlo
-
 # sagetex
 *.sagetex.sage
 *.sagetex.py
 *.sagetex.scmd
-
 # sympy
 *.sout
 *.sympy
 sympy-plots-for-*.tex/
-
 # pdfcomment
 *.upa
 *.upb
-
 # pythontex
 *.pytxcode
 pythontex-files-*/
-
 # thmtools
 *.loe
-
 # TikZ & PGF
 *.dpth
 *.md5
 *.auxlock
-
 # todonotes
 *.tdo
-
 # xindy
 *.xdy
-
 # xypic precompiled matrices
 *.xyc
-
 # endfloat
 *.ttt
 *.fff
-
 # Latexian
 TSWLatexianTemp*
-
 ## Editors:
 # WinEdt
 *.bak
 *.sav
-
 # Texpad
 .texpadtmp
-
 # Kile
 *.backup
-
 # KBibTeX
 *~[0-9]*
-
 *~
 configuracao.pdf
 templates/postextual.tex
@@ -199,3 +162,5 @@ xxx-*
 master.bib
 ./configuracao.yaml
 .emacs.desktop*
+.Rproj.user
+TCC.Rproj
